--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
         "karma-mocha": "^1.3.0",
         "karma-typescript": "^3.0.9",
         "mocha": "^5.0.0"
+    },
+    "peerDependencies": {
+        "typescript": "^2.6.2"
     }
 }
