--- a/templates/package.json
+++ b/templates/package.json
@@ -1,6 +1,10 @@
 {
+    "name": "name",
+    "version": "0.0.0",
+    "module": "dist/index.js",
+    "types": "dist/index.d.ts",
     "scripts": {
-        "build": "tsc",
+        "build": "tsc && tsc -p tsconfig.cjs.json && rimraf dist/*.spec.js*",
         "test": "karma start --single-run --browsers ChromeHeadless karma.config.js",
         "watch": "karma start --auto-watch --browsers ChromeDebugging karma.config.js",
         "clean": "rimraf dist"
@@ -8,6 +12,6 @@
     "devDependencies": {
         "rimraf": "^2.6.2",
         "typescript": "^2.6.2",
-        "ur-test": "0.0.1"
+        "ur-test": "^0.0.1"
     }
 }
