--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "karma-chrome-launcher": "^2.2.0",
         "karma-mocha": "^1.3.0",
         "karma-typescript": "^3.0.12",
+        "karma-typescript-es6-transform": "^1.0.4",
         "mocha": "^5.2.0"
     },
     "peerDependencies": {
